# gDetect

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gdetect/: continuousoffline.py  graphutilities.py
