# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdetect"
version = "0.1.0"
description = "Graph-based changepoint detection"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Alexander Wold", email = "atwold2016@gmail.com" }
]

license = { file = "LICENSE" }

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "scikit-learn>=1.1",
  "matplotlib>=3.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gdetect = ["MST.so"]

[project.urls]
Homepage = "https://github.com/atwold/gDetect.git"